--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,9 @@ android {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
-    implementation "com.google.firebase:firebase-auth:19.3.2"
+        implementation 'com.google.firebase:firebase-database:19.3.1'
+
+        implementation "com.google.firebase:firebase-auth:19.3.2"
         kapt "androidx.room:room-compiler:$room_version"
 
     testImplementation 'junit:junit:4.13'
